[project]
name = "sugikey"
description = "Drawing Sankey diagrams in Python"
authors = [
    { name = "Spectalizer", email = "spectalizer@protonmail.com" },
]
readme = "README.md"
urls = {repository = "https://github.com/spectalizer/Sugikey/" }

[tool.poetry]
version = "0.0.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
matplotlib = "^3.8.4"
networkx = "^3.0"
pulp = "^2.8.0"
openpyxl = "^3.1.2"
bokeh = "^3.4.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.1"
pytest = "^7.2.2"
jupyterlab = "^3.6.3"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.1.1"
python-semantic-release = "^9.21.1"
mkdocs-material = "^9.6.12"
twine = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
upload_to_repository = true
hvcs = "gitlab"
build_command = "pip install poetry && poetry build"

[tool.mypy]
ignore_missing_imports = true